<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logos Swipe</string>
    <string name="title_section1">SOLUTIONS</string>
    <string name="title_section2">DEBAT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_values_choice">Values Choice</string>
    <string name="title_activity_values_rank">Values Rank</string>
    <string name="title_activity_solutions_choice">Solutions Choice</string>
    <string name="title_activity_versus">Versus</string>
    <string name="title_activity_final_solutions">Final Solutions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_problem">Nouvelle problématique</string>
    <string name="new_solution">Nouvelle solution</string>
    <string name="new_value">Nouvelle valeur</string>
    <string name="enter_new_problem_title">Titre</string>
    <string name="enter_new_solution_title">Titre</string>
    <string name="enter_new_value_title">Titre</string>
    <string name="enter_new_problem_description">Description</string>
    <string name="enter_new_solution_description">Description</string>
    <string name="enter_new_value_description">Description</string>
    <string name="cancel">Annuler</string>
    <string name="create">Créer</string>
    <string name="title_activity_solutions_presentation">SolutionsPresentationActivity</string>

</resources>
