<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context="com.logos.mvp.logosswipe.UI.fragments.NewProblemFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fragment_title_heigth"
        android:text="@string/new_solution"
        android:enabled="false"
        android:elegantTextHeight="false"
        android:textColor="#000000"
        android:textSize="@dimen/fragment_title_text_size"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_title_heigth"
            android:id="@+id/new_value_title"
            android:gravity="top"
            android:hint="@string/enter_new_value_title" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_description_heigth"
            android:id="@+id/new_value_description"
            android:gravity="top"
            android:hint="@string/enter_new_value_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:id="@+id/new_value_cancel_button" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/create"
            android:id="@+id/new_value_create_button" />
    </LinearLayout>

</LinearLayout>

